--- a/index.html
+++ b/index.html
@@ -5,28 +5,36 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>魚料理レシピ一覧</title>
 <style>
-/* 既存のスタイルがあれば残しつつ、以下のスタイルを追加 */
-
-/* -- 基本レイアウト -- */
+/* ----------------------------------------------------- */
+/* 1. 基本設定と全体レイアウト */
+/* ----------------------------------------------------- */
 body {
-    font-family: sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: #f4f7f6;
+    background: #f8f9fa; /* やや明るい背景色 */
+    color: #343a40;
 }
 
 #wrap {
-    max-width: 1200px;
+    max-width: 1400px; /* 少し広めに設定 */
     margin: 0 auto;
     padding: 20px;
 }
 
 header {
-    background: white;
-    padding: 15px 20px;
+    background: #ffffff;
+    padding: 15px 25px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+}
+
+h1 {
+    font-size: 1.8em;
+    color: #007bff;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .controls {
@@ -39,30 +47,61 @@ header {
 .controls input[type="search"],
 .controls select,
 .controls button {
-    padding: 8px;
-    border: 1px solid #ccc;
+    padding: 8px 12px;
+    border: 1px solid #ced4da;
     border-radius: 4px;
+    font-size: 1em;
 }
 
-/* -- テーブルスタイル -- */
+.controls button {
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border-color: #007bff;
+    transition: background-color 0.2s;
+}
+
+.controls button:hover {
+    background-color: #0056b3;
+}
+
+.muted {
+    color: #6c757d;
+    font-size: 0.9em;
+}
+
+/* ----------------------------------------------------- */
+/* 2. テーブル表示 (リストビュー) */
+/* ----------------------------------------------------- */
 #recipeTable {
     width: 100%;
-    border-collapse: collapse;
-    background: white;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    border-collapse: separate; /* border-radiusのためにcollapseを解除 */
+    border-spacing: 0;
+    background: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    overflow: hidden; /* 角丸を適用 */
+}
+
+#recipeTable thead {
+    background-color: #e9ecef;
 }
 
 #recipeTable th, #recipeTable td {
-    padding: 10px;
+    padding: 12px 15px;
     text-align: left;
-    border-bottom: 1px solid #eee;
-    vertical-align: top;
+    border-bottom: 1px solid #dee2e6;
+    vertical-align: middle;
 }
 
 #recipeTable th {
-    background-color: #f8f8f8;
     font-weight: 600;
+    color: #495057;
+    white-space: nowrap;
+}
+
+#recipeTable tbody tr:last-child td {
+    border-bottom: none;
 }
 
 .recipe-thumb {
@@ -70,44 +109,51 @@ header {
     height: 60px;
     object-fit: cover;
     border-radius: 4px;
+    display: block;
 }
 
 .tag-type {
     display: inline-block;
-    padding: 2px 6px;
-    border-radius: 3px;
-    font-size: 0.8em;
+    padding: 3px 8px;
+    border-radius: 12px;
+    font-size: 0.75em;
     font-weight: bold;
     color: white;
+    text-transform: uppercase;
 }
-.type-recipe { background-color: #4CAF50; }
-.type-pre { background-color: #2196F3; }
+.type-recipe { background-color: #28a745; } /* Green */
+.type-pre { background-color: #17a2b8; } /* Cyan */
 
-.muted {
-    color: #888;
+.actions button {
+    padding: 5px 10px;
+    margin-right: 5px;
+    margin-bottom: 4px; /* Stacked look */
+    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     font-size: 0.9em;
 }
 
-.actions button {
-    padding: 5px 8px;
-    margin-right: 5px;
-    cursor: pointer;
-    border: none;
-    border-radius: 3px;
-    background: #007bff;
+/* 印刷ボタンの色を薄いグレーに戻す */
+.actions button:nth-of-type(2) {
+    background: #a0aec0; 
     color: white;
+    border-color: #a0aec0;
 }
 
-/* -- 詳細ビュー切り替え -- */
+/* ----------------------------------------------------- */
+/* 3. 詳細ビュー */
+/* ----------------------------------------------------- */
 .detail-container {
-    padding: 20px;
-    background: white;
+    padding: 30px;
+    background: #ffffff;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+/* ビューの切り替え (JavaScriptでクラスを付与) */
 .list-view #recipeTable, .list-view #message {
-    display: block;
+    display: table; /* table-layoutを保持 */
 }
 .list-view #detailContainer {
     display: none;
@@ -119,19 +165,35 @@ header {
     display: block;
 }
 
-.back-button {
-    float: right;
-    background: #f44336;
-    color: white;
-    padding: 8px 15px;
-}
-
 .detail-header {
     padding-bottom: 15px;
-    border-bottom: 1px solid #eee;
-    margin-bottom: 15px;
+    border-bottom: 1px solid #dee2e6;
+    margin-bottom: 20px;
+    position: relative;
 }
 
+.back-button {
+    float: right;
+    background: #6c757d !important; /* 目立ちすぎない色 */
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 4px;
+    font-size: 1em;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.detail-header h2 {
+    font-size: 1.5em;
+    color: #343a40;
+    margin-top: 0;
+    margin-bottom: 5px;
+    padding-right: 150px; /* 戻るボタンのスペースを確保 */
+}
+
+/* メタ情報 (pill) */
 .meta {
     display: flex;
     flex-wrap: wrap;
@@ -140,34 +202,72 @@ header {
 }
 
 .pill {
-    background: #e0e0e0;
-    padding: 4px 10px;
+    background: #e9ecef; /* Light gray pill background */
+    color: #495057;
+    padding: 4px 12px;
     border-radius: 15px;
-    font-size: 0.85em;
+    font-size: 0.8em;
+    font-weight: 500;
+    white-space: nowrap;
 }
 
+.pre-link-pill {
+    background: #17a2b8 !important; 
+    color: white !important;
+}
+
+/* セクションとグリッド */
 .detail-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-}
-
-.recipe-steps-grid {
-    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 10px;
-    margin-top: 10px;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
+.detail-section {
+    padding: 15px;
+    border: 1px solid #e9ecef;
+    border-radius: 6px;
+    background: #f8f9fa;
+}
+
+.section-title {
+    font-size: 1.2em;
+    color: #007bff;
+    border-bottom: 2px solid #007bff;
+    padding-bottom: 5px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+#detailIngredients ul, 
+#detailMemo ul, 
+#detailProps ul {
+    list-style: disc;
+    padding-left: 20px;
+    margin-top: 0;
+}
+
+/* レシピ手順のグリッド */
 .recipe-step-card {
-    border: 1px solid #ddd;
+    border: 1px solid #dee2e6;
     padding: 10px;
     border-radius: 4px;
+    background: #ffffff;
+    margin-bottom: 10px; /* JSでgridを使うため、このmarginは不要な場合があるが保険で */
 }
 
-/* -- ★★★ モーダルスタイル ★★★ -- */
+.recipe-step-card p {
+    margin-top: 5px;
+    line-height: 1.5;
+}
+
+
+/* ----------------------------------------------------- */
+/* 4. モーダルスタイル (フィルターUI) */
+/* ----------------------------------------------------- */
 .modal-overlay {
-    display: none; /* 初期状態では非表示 */
+    display: none; /* JSで 'flex' に切り替える */
     position: fixed;
     z-index: 1000;
     left: 0;
@@ -175,67 +275,94 @@ header {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4); /* 半透明の黒 */
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
+    align-items: flex-start; /* 上部に寄せる */
+    padding-top: 50px;
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto; /* 画面中央付近 */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 90%;
-    max-width: 700px;
+    background-color: #ffffff;
+    padding: 30px;
+    border: none; 
+    width: 95%;
+    max-width: 800px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
 }
 
 .modal-content h2 {
+    font-size: 1.5em;
+    color: #007bff;
     border-bottom: 2px solid #007bff;
     padding-bottom: 10px;
     margin-top: 0;
+    margin-bottom: 20px;
 }
 
 .filter-group {
-    border: 1px solid #ccc;
+    border: 1px solid #ced4da;
     padding: 15px;
     margin-bottom: 20px;
-    border-radius: 4px;
+    border-radius: 6px;
+    background-color: #f8f9fa;
 }
 
 .filter-group legend {
-    font-weight: bold;
+    font-weight: 700;
     padding: 0 10px;
-    color: #333;
+    color: #343a40;
+    font-size: 1.1em;
+}
+
+.filter-hint {
+    font-size: 0.85em;
+    color: #6c757d;
+    margin-bottom: 10px;
 }
 
 .filter-item {
     display: inline-block;
-    margin-right: 20px;
-    margin-bottom: 5px;
+    margin-right: 25px;
+    margin-bottom: 8px;
+}
+
+.filter-item input[type="checkbox"] {
+    margin-right: 5px;
 }
 
 .filter-item label {
     cursor: pointer;
-    margin-left: 5px;
+    font-weight: normal;
 }
 
 .modal-footer {
     display: flex;
     justify-content: flex-end;
     gap: 10px;
-    padding-top: 15px;
-    border-top: 1px solid #eee;
+    padding-top: 20px;
+    border-top: 1px solid #dee2e6;
+    margin-top: 10px;
 }
 
-.primary-button {
-    background: #007bff;
-    color: white;
-    border: none;
+.modal-footer button {
     padding: 10px 20px;
+    border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-size: 1em;
 }
-/* -- ★★★ モーダルスタイル ここまで ★★★ -- */
+
+#filterClearBtn {
+    background: #6c757d;
+    color: white;
+}
+
+#applyFilterBtn {
+    background: #007bff;
+    color: white;
+}
+/* ----------------------------------------------------- */
 </style>
 
 <div class="wrap" id="wrap">
