--- a/index.html
+++ b/index.html
@@ -6,105 +6,113 @@
 <title>魚料理レシピ一覧</title>
 <style>
 /* ----------------------------------------------------- */
-/* 1. 基本設定と全体レイアウト */
+/* 0. 変数とリセット */
 /* ----------------------------------------------------- */
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f8f9fa; /* やや明るい背景色 */
-    color: #343a40;
+:root{
+    --bg:#f6f7fb;
+    --card:#ffffff;
+    --accent:#2b6cb0;
+    --muted:#666;
+    --success:#2f855a;
+    --danger:#c53030;
+    --max-width:1400px; /* wrapに合わせるため1400pxに修正 */
+    --shadow:0 6px 18px rgba(20,20,40,0.08); /* テーブルと同じ影 */
 }
-
-#wrap {
-    max-width: 1400px; /* 少し広めに設定 */
-    margin: 0 auto;
-    padding: 20px;
+*{box-sizing:border-box}
+body{
+    font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", "Meiryo",sans-serif;
+    margin:0;
+    background:var(--bg);
+    color:#222;
+    padding:20px;
+    display:flex;
+    justify-content:center;
 }
-
-header {
-    background: #ffffff;
-    padding: 15px 25px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
+.wrap{
+    width:100%;
+    max-width:var(--max-width);
 }
-
-h1 {
-    font-size: 1.8em;
-    color: #007bff;
-    margin-top: 0;
-    margin-bottom: 10px;
+/* ----------------------------------------------------- */
+/* 1. ヘッダーとコントロール */
+/* ----------------------------------------------------- */
+header{
+    /* header自体のデザインは元のCSSと合わせる */
+    background:var(--card);
+    padding:15px 25px;
+    border-radius:10px; /* テーブルと合わせる */
+    box-shadow:0 4px 12px rgba(20,20,40,0.05); /* 影を追加 */
+    margin-bottom:20px;
+    
+    display:flex;
+    gap:12px;
+    align-items:flex-end;
 }
-
-.controls {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-items: center;
+header h1{margin:0;font-size:1.6rem; color:var(--accent);}
+.controls{
+    margin-left:auto;
+    display:flex;
+    gap:8px;
+    flex-wrap:wrap;
+    align-items:center;
 }
-
-.controls input[type="search"],
-.controls select,
-.controls button {
-    padding: 8px 12px;
-    border: 1px solid #ced4da;
-    border-radius: 4px;
-    font-size: 1em;
+input[type="search"], select{
+    padding:9px 12px; /* 少し大きく */
+    border-radius:8px;
+    border:1px solid #d6d8df;
+    background:white;
 }
-
-.controls button {
-    cursor: pointer;
-    background-color: #007bff;
-    color: white;
-    border-color: #007bff;
-    transition: background-color 0.2s;
+button{
+    padding:9px 14px; /* 少し大きく */
+    border-radius:8px;
+    border:none;
+    background:var(--accent);
+    color:white;
+    cursor:pointer;
+    transition:background-color 0.2s;
 }
-
-.controls button:hover {
-    background-color: #0056b3;
+button:hover:not(:disabled){
+    background: #23548f; /* アクセントカラーより少し濃く */
 }
-
-.muted {
-    color: #6c757d;
-    font-size: 0.9em;
-}
+button:disabled{opacity:.6;cursor:not-allowed}
 
 /* ----------------------------------------------------- */
-/* 2. テーブル表示 (リストビュー) */
+/* 2. テーブル表示 */
 /* ----------------------------------------------------- */
-#recipeTable {
-    width: 100%;
-    border-collapse: separate; /* border-radiusのためにcollapseを解除 */
+main{
+    background:transparent;
+}
+#message{
+    padding:10px 0;
+    font-size:0.95rem;
+}
+table{
+    width:100%;
+    border-collapse:separate; /* 角丸のためにseparateに変更 */
     border-spacing: 0;
-    background: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden; /* 角丸を適用 */
+    background:var(--card);
+    border-radius:10px;
+    overflow:hidden;
+    box-shadow:var(--shadow);
 }
-
-#recipeTable thead {
-    background-color: #e9ecef;
+thead th{
+    text-align:left;
+    padding:12px 14px;
+    font-size:0.9rem;
+    background:#f1f5f9;
+    border-bottom:1px solid #e2e8f0; /* 少し濃い線 */
+    font-weight:600;
 }
-
-#recipeTable th, #recipeTable td {
-    padding: 12px 15px;
-    text-align: left;
-    border-bottom: 1px solid #dee2e6;
-    vertical-align: middle;
+tbody td{
+    padding:12px 14px;
+    border-bottom:1px dashed #e2e8f0; /* dashed線を採用 */
+    vertical-align:top;
+    font-size:0.95rem;
 }
+tbody tr:hover{background:rgba(43,108,176,0.03)}
 
-#recipeTable th {
-    font-weight: 600;
-    color: #495057;
-    white-space: nowrap;
-}
+.muted{color:var(--muted);font-size:0.85rem}
 
-#recipeTable tbody tr:last-child td {
-    border-bottom: none;
-}
-
-.recipe-thumb {
+.recipe-thumb{
     width: 80px;
     height: 60px;
     object-fit: cover;
@@ -112,72 +120,54 @@ h1 {
     display: block;
 }
 
-.tag-type {
-    display: inline-block;
-    padding: 3px 8px;
-    border-radius: 12px;
-    font-size: 0.75em;
-    font-weight: bold;
-    color: white;
-    text-transform: uppercase;
-}
-.type-recipe { background-color: #28a745; } /* Green */
-.type-pre { background-color: #17a2b8; } /* Cyan */
+/* タイプタグの色を元のCSSの雰囲気に合わせる */
+.tag-type{padding:4px 8px;border-radius:6px;font-size:0.8rem; font-weight: 500;}
+.type-recipe{background:#fff7ed;color:#b45309;border:1px solid #f6e7d0}
+.type-pre{background:#f0fff4;color:var(--success);border:1px solid #d6f7df}
 
-.actions button {
-    padding: 5px 10px;
-    margin-right: 5px;
-    margin-bottom: 4px; /* Stacked look */
-    cursor: pointer;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 0.9em;
+.actions button{
+    margin-right:6px;
+    padding: 6px 10px;
+    font-size: 0.9rem;
+    margin-bottom: 4px;
+}
+/* 詳細ボタン（青） */
+.actions button:first-child{
+    background:var(--accent);
+}
+/* 印刷ボタン（グレー） */
+.actions button:nth-child(2){
+    background:#a0aec0; 
 }
 
-/* 印刷ボタンの色を薄いグレーに戻す */
-.actions button:nth-of-type(2) {
-    background: #a0aec0; 
-    color: white;
-    border-color: #a0aec0;
-}
 
 /* ----------------------------------------------------- */
 /* 3. 詳細ビュー */
 /* ----------------------------------------------------- */
-.detail-container {
-    padding: 30px;
-    background: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.detail-container{
+    padding: 25px;
+    background: var(--card);
+    border-radius: 10px;
+    box-shadow: var(--shadow);
 }
 
-/* ビューの切り替え (JavaScriptでクラスを付与) */
-.list-view #recipeTable, .list-view #message {
-    display: table; /* table-layoutを保持 */
-}
-.list-view #detailContainer {
-    display: none;
-}
-.detail-view #recipeTable, .detail-view #message {
-    display: none;
-}
-.detail-view #detailContainer {
-    display: block;
-}
+/* ビューの切り替え (JSクラス) */
+.list-view #recipeTable { display: table; }
+.list-view #detailContainer { display: none; }
+.detail-view #recipeTable { display: none; }
+.detail-view #detailContainer { display: block; }
 
 .detail-header {
     padding-bottom: 15px;
-    border-bottom: 1px solid #dee2e6;
+    border-bottom: 1px solid #e2e8f0;
     margin-bottom: 20px;
     position: relative;
 }
 
 .back-button {
-    float: right;
-    background: #6c757d !important; /* 目立ちすぎない色 */
+    background: #909090 !important; /* 目立ちすぎないグレー */
     color: white;
     padding: 8px 15px;
-    border: none;
     border-radius: 4px;
     font-size: 1em;
     position: absolute;
@@ -186,11 +176,11 @@ h1 {
 }
 
 .detail-header h2 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     color: #343a40;
     margin-top: 0;
     margin-bottom: 5px;
-    padding-right: 150px; /* 戻るボタンのスペースを確保 */
+    padding-right: 150px; 
 }
 
 /* メタ情報 (pill) */
@@ -201,43 +191,44 @@ h1 {
     margin-top: 10px;
 }
 
-.pill {
-    background: #e9ecef; /* Light gray pill background */
-    color: #495057;
-    padding: 4px 12px;
-    border-radius: 15px;
-    font-size: 0.8em;
+.pill{
+    display:inline-block;
+    padding:4px 10px; /* 少し大きく */
+    border-radius:999px;
+    background:#eef5ff;
+    color:var(--accent);
+    font-size:0.85rem;
     font-weight: 500;
-    white-space: nowrap;
 }
 
 .pre-link-pill {
-    background: #17a2b8 !important; 
+    background: #17a2b8 !important; /* 下処理リンクは目立つ色 */
     color: white !important;
 }
 
 /* セクションとグリッド */
 .detail-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     margin-bottom: 20px;
 }
 
 .detail-section {
     padding: 15px;
-    border: 1px solid #e9ecef;
-    border-radius: 6px;
-    background: #f8f9fa;
+    border: 1px solid #eef2f7;
+    border-radius: 8px;
+    background: var(--f8f9fa); /* やや薄い背景 */
 }
 
 .section-title {
-    font-size: 1.2em;
-    color: #007bff;
-    border-bottom: 2px solid #007bff;
+    font-size: 1.2rem;
+    color: var(--accent);
+    border-bottom: 2px solid var(--accent);
     padding-bottom: 5px;
     margin-top: 0;
     margin-bottom: 10px;
+    font-weight: 600;
 }
 
 #detailIngredients ul, 
@@ -246,66 +237,63 @@ h1 {
     list-style: disc;
     padding-left: 20px;
     margin-top: 0;
+    line-height: 1.6;
 }
 
-/* レシピ手順のグリッド */
+/* レシピ手順のカード */
 .recipe-step-card {
-    border: 1px solid #dee2e6;
-    padding: 10px;
+    border: 1px solid #eef2f7;
+    padding: 15px;
+    border-radius: 6px;
+    background: var(--card);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+    line-height: 1.6;
+}
+
+.recipe-step-card img {
     border-radius: 4px;
-    background: #ffffff;
-    margin-bottom: 10px; /* JSでgridを使うため、このmarginは不要な場合があるが保険で */
+    margin-bottom: 10px;
 }
 
-.recipe-step-card p {
-    margin-top: 5px;
-    line-height: 1.5;
-}
-
-
 /* ----------------------------------------------------- */
-/* 4. モーダルスタイル (フィルターUI) */
+/* 4. モーダルスタイル (フィルターUI) - クラス名を modal-overlay に統一 */
 /* ----------------------------------------------------- */
-.modal-overlay {
-    display: none; /* JSで 'flex' に切り替える */
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5); 
-    justify-content: center;
-    align-items: flex-start; /* 上部に寄せる */
-    padding-top: 50px;
+#filterModal { /* IDで指定 */
+    position:fixed;
+    inset:0;
+    background:rgba(12,18,30,0.45);
+    display:none; /* JSで 'flex' に切り替える */
+    align-items:center;
+    justify-content:center;
+    padding:20px;
+    z-index:1000;
 }
 
 .modal-content {
-    background-color: #ffffff;
-    padding: 30px;
-    border: none; 
-    width: 95%;
-    max-width: 800px;
-    border-radius: 8px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+    width:100%;
+    max-width:760px;
+    background:var(--card);
+    border-radius:12px;
+    padding:25px; /* 少し大きく */
+    box-shadow:0 10px 30px rgba(10,20,40,0.25);
+    max-height:90vh;
+    overflow:auto;
 }
 
 .modal-content h2 {
-    font-size: 1.5em;
-    color: #007bff;
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 10px;
-    margin-top: 0;
-    margin-bottom: 20px;
+    font-size:1.5rem;
+    color:var(--accent);
+    border-bottom:2px solid var(--accent);
+    padding-bottom:8px;
+    margin:0 0 20px 0;
 }
 
 .filter-group {
-    border: 1px solid #ced4da;
+    border: 1px solid #e2e8f0;
     padding: 15px;
     margin-bottom: 20px;
-    border-radius: 6px;
-    background-color: #f8f9fa;
+    border-radius: 8px;
+    background-color: #fcfdfe;
 }
 
 .filter-group legend {
@@ -317,8 +305,8 @@ h1 {
 
 .filter-hint {
     font-size: 0.85em;
-    color: #6c757d;
-    margin-bottom: 10px;
+    color: var(--muted);
+    margin: 5px 0 10px 0;
 }
 
 .filter-item {
@@ -327,42 +315,58 @@ h1 {
     margin-bottom: 8px;
 }
 
-.filter-item input[type="checkbox"] {
-    margin-right: 5px;
-}
-
-.filter-item label {
-    cursor: pointer;
-    font-weight: normal;
-}
-
 .modal-footer {
     display: flex;
     justify-content: flex-end;
     gap: 10px;
     padding-top: 20px;
-    border-top: 1px solid #dee2e6;
+    border-top: 1px solid #e2e8f0;
     margin-top: 10px;
 }
 
 .modal-footer button {
     padding: 10px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 6px;
     cursor: pointer;
     font-size: 1em;
 }
 
 #filterClearBtn {
-    background: #6c757d;
+    background: #a0aec0; /* 印刷ボタンと同じグレー */
     color: white;
 }
 
 #applyFilterBtn {
-    background: #007bff;
+    background: var(--accent);
     color: white;
 }
-/* ----------------------------------------------------- */
+
+/* レスポンシブ対応 */
+@media (max-width:768px){
+    .controls {
+        justify-content: space-between;
+    }
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+    .detail-grid {
+        grid-template-columns: 1fr;
+    }
+    .back-button {
+        position: static;
+        margin-top: 10px;
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+    .detail-header h2 {
+        padding-right: 0;
+    }
+}
 </style>
 
 <div class="wrap" id="wrap">
