--- a/index.html
+++ b/index.html
@@ -464,7 +464,8 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
 
 <script>
 /*
- * 最終修正版: 魚種フィルターを厳密なAND条件 (b ⊆ a) に変更 ＋ 時間/費用にカスタム入力欄を追加
+ * 最終修正版: 魚種フィルターを厳密なAND条件 (b ⊆ a) に変更 ＋ カスタム入力欄対応
+ * ＋ 絞り込みフィルターを「下処理 (pre)」アイテムにも適用
  */
 
 (function(){
@@ -791,7 +792,7 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
         // 1. 魚種フィルター (fish-name) - チェックボックス（複数選択）
         const fishSet = new Set();
         list.forEach(item => {
-            if (item._type === 'recipe' && Array.isArray(item['fish-name'])) {
+            if (Array.isArray(item['fish-name'])) { // pre/recipe 両方から魚種名を収集
                 item['fish-name'].forEach(fish => {
                     const trimmedFish = fish.trim();
                     if (trimmedFish) fishSet.add(trimmedFish);
@@ -800,16 +801,16 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
         });
         const uniqueFish = Array.from(fishSet).sort();
         // ユーザーにAND条件であることを示すヒントテキスト
-        fragment.appendChild(createCheckboxGroup('魚種', 'fish-name', uniqueFish, 'レシピに使う魚が、選択した魚種のすべてに含まれるものを表示 (b ⊆ a)'));
+        fragment.appendChild(createCheckboxGroup('魚種', 'fish-name', uniqueFish, 'レシピ/下処理に使う魚が、選択した魚種のすべてに含まれるものを表示 (b ⊆ a)'));
 
         // 2. 難易度フィルター (difficulty) - ラジオボタン（単一選択）
-        fragment.appendChild(createRadioGroup('難易度 (最大)', 'difficulty', DIFFICULTY_OPTIONS, '選択した難易度以下のレシピを表示', DIFFICULTY_OPTIONS.map(d => `難易度 ${d} 以下`)));
+        fragment.appendChild(createRadioGroup('難易度 (最大)', 'difficulty', DIFFICULTY_OPTIONS, '選択した難易度以下のアイテムを表示', DIFFICULTY_OPTIONS.map(d => `難易度 ${d} 以下`)));
 
         // 3. 所要時間フィルター (time) - ラジオボタン＋カスタム入力欄
-        fragment.appendChild(createRadioGroup('所要時間 (分・最大)', 'time', TIME_OPTIONS, '選択肢またはカスタム入力で指定した時間以下のレシピを表示', TIME_OPTIONS.map(t => `${t}分以内`), 'radio-input', {min: 1, max: TIME_MAX}));
+        fragment.appendChild(createRadioGroup('所要時間 (分・最大)', 'time', TIME_OPTIONS, '選択肢またはカスタム入力で指定した時間以下のアイテムを表示', TIME_OPTIONS.map(t => `${t}分以内`), 'radio-input', {min: 1, max: TIME_MAX}));
 
         // 4. 費用フィルター (cost) - ラジオボタン＋カスタム入力欄
-        fragment.appendChild(createRadioGroup('費用 (円・最大)', 'cost', COST_OPTIONS, '選択肢またはカスタム入力で指定した費用以下のレシピを表示', COST_OPTIONS.map(c => `¥${c}以下`), 'radio-input', {min: 100, max: COST_MAX}));
+        fragment.appendChild(createRadioGroup('費用 (円・最大)', 'cost', COST_OPTIONS, '選択肢またはカスタム入力で指定した費用以下のアイテムを表示', COST_OPTIONS.map(c => `¥${c}以下`), 'radio-input', {min: 100, max: COST_MAX}));
 
         filterContent.appendChild(fragment);
 
@@ -1192,21 +1193,21 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
             });
         }
 
-        // ★★★ 3. フィルターロジックの適用 (魚の種類をAND条件に修正) ★★★
+        // ★★★ 3. フィルターロジックの適用 (下処理アイテムにも適用) ★★★
         list = list.filter(item => {
-            // 下処理アイテムはレシピ固有のフィルター対象外
-            if (item._type === 'pre') return true;
+            // NOTE: item._type === 'pre' のスキップ処理を削除したため、
+            // 下処理アイテムにも魚種、難易度、時間、費用のフィルターが適用される。
 
             // --- 魚種フィルター (fish-name) - AND条件 (b ⊆ a) ---
             const activeFish = activeFilters['fish-name']; // a: ユーザーが選択した魚種リスト (Set)
             if (activeFish.size > 0) {
-                // b: レシピで使われている魚種を取得し、整形
+                // b: レシピ/下処理で使われている魚種を取得し、整形
                 const itemFish = Array.isArray(item['fish-name']) ? item['fish-name'].map(f => f.trim()) : [];
                 
-                // b ⊆ a のチェック: レシピで使われている魚 (b) すべてが、ユーザーの選択肢 (a) に含まれているか？
-                // itemFish.every(...) が false の場合、レシピに必要な魚の中に、選択されていない魚が含まれている
+                // b ⊆ a のチェック: レシピ/下処理で使われている魚 (b) すべてが、ユーザーの選択肢 (a) に含まれているか？
                 const allMatch = itemFish.every(f => activeFish.has(f));
                 
+                // itemFishが空の配列の場合 (魚種が定義されていないアイテム)、every()はtrueを返すため通過
                 if (!allMatch) return false;
             }
 
