--- a/index.html
+++ b/index.html
@@ -5,39 +5,39 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>魚料理レシピ一覧</title>
 <style>
-/* * 全機能対応の統合CSSスタイル
- * レシピリスト、詳細、提案画面の切り替え、ボタン、モーダル、タグ表示に対応。
- */
-
-/* === 1. 基本設定と変数 === */
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f7fafc; /* 薄いグレーの背景 */
-    color: #2d3748;
-}
-
+/* === 0. 変数とリセット === */
 :root {
-    --accent: #48bb78; /* メインカラー (グリーン系) */
-    --primary: #4299e1; /* セカンダリカラー (ブルー系) */
-    --danger: #e53e3e; /* 警告/削除カラー (レッド系) */
-    --card: #ffffff;
-    --border: #e2e8f0;
+    --bg: #f6f7fb;       /* 全体背景 */
+    --card: #ffffff;     /* カード、テーブル、モーダルの背景 */
+    --accent: #2b6cb0;   /* 主要ボタン (青系) */
+    --success: #2f855a;  /* 成功アクション/推奨 (緑系) */
+    --danger: #c53030;   /* 警告/クリア (赤系) */
+    --primary: #4299e1;  /* フィルターボタン (ライトブルー系) */
+    --muted: #666;       /* 薄い文字色 */
+    --border: #e2e8f0;   /* ボーダー色 */
+    --max-width: 1200px;
+}
+* {
+    box-sizing: border-box;
+    transition: background-color 0.2s, box-shadow 0.2s; /* ホバー時のトランジションを追加 */
+}
+body {
+    font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", "Meiryo", sans-serif;
+    margin: 0;
+    background: var(--bg);
+    color: #222;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
 }
 
+/* === 1. レイアウトとビューの切り替え === */
 #wrap {
-    max-width: 1200px;
-    margin: 0 auto;
-    transition: all 0.5s ease;
+    width: 100%;
+    max-width: var(--max-width);
+    transition: all 0.5s ease; /* ビュー切り替え時のスムーズな動き */
 }
-
-h1, h2 {
-    color: #2d3748;
-}
-
-/* === 2. ビューの排他制御 === */
-/* JSが設定するクラスに基づいて、画面全体を切り替える */
+/* ビューの排他制御: JSが設定するクラスに基づいて表示/非表示を切り替える */
 #listContainer, #detailContainer, #recommendContainer {
     display: none;
     padding-top: 20px;
@@ -46,174 +46,236 @@ h1, h2 {
 #wrap.detail-view #detailContainer { display: block; }
 #wrap.recommend-view #recommendContainer { display: block; }
 
-/* === 3. フォームコントロールとボタン === */
+/* === 2. ヘッダーとコントロール === */
+header {
+    display: flex;
+    gap: 12px;
+    align-items: flex-end;
+    margin-bottom: 18px;
+    flex-wrap: wrap; /* モバイル対応 */
+}
+header h1 { margin: 0; font-size: 1.3rem; }
 .controls-area {
+    margin-left: auto;
     display: flex;
     gap: 10px;
-    margin-bottom: 20px;
+    flex-wrap: wrap;
+    align-items: center;
 }
-.controls-area input, .controls-area select {
-    padding: 10px;
-    border: 1px solid var(--border);
-    border-radius: 4px;
-    font-size: 1em;
+input[type="search"], select {
+    padding: 8px 10px;
+    border-radius: 8px;
+    border: 1px solid #d6d8df;
+    background: white;
 }
 
-/* 全てのボタンに適用する基本スタイル */
-.action-buttons-group button, .back-btn, #recommendOpenBtn, #reloadBtn, button {
+/* --- ボタン群 --- */
+button, .back-btn {
     padding: 10px 15px;
-    border-radius: 4px;
-    border: 1px solid #cbd5e0;
+    border-radius: 8px;
+    border: none;
     cursor: pointer;
-    font-weight: bold;
-    transition: background-color 0.2s, transform 0.1s;
+    font-weight: 600;
+    white-space: nowrap;
 }
-button:active {
-    transform: scale(0.98);
-}
+button:hover { filter: brightness(1.1); }
+button:active { transform: scale(0.98); }
+button:disabled { opacity: 0.6; cursor: not-allowed; }
 
-/* 主要なアクションボタン */
-#recommendOpenBtn, #filterOpenBtn, #applyFilterBtn, #filterClearBtn {
-    color: white;
-    border: none !important;
-}
+/* アクションボタン（緑・青・赤） */
+#recommendOpenBtn { background: var(--success); color: white; }
+#filterOpenBtn { background: var(--primary); color: white; }
+#applyFilterBtn { background: var(--success); color: white; }
+#filterClearBtn { background: var(--danger); color: white; }
 
-#recommendOpenBtn { background-color: var(--accent); }
-#recommendOpenBtn:hover { background-color: #38a169; }
-
-#filterOpenBtn { background-color: var(--primary); }
-#filterOpenBtn:hover { background-color: #3182ce; }
-
-#applyFilterBtn { background-color: var(--accent); }
-#applyFilterBtn:hover { background-color: #38a169; }
-
-#filterClearBtn { background-color: var(--danger); }
-#filterClearBtn:hover { background-color: #c53030; }
-
-/* 戻るボタン */
-.back-btn, #backToListBtn, #backToRecommendBtn {
-    background-color: var(--card);
+/* 戻るボタン（白・グレー） */
+.back-btn { 
+    background: var(--card); 
     color: #4a5568;
-    border: 1px solid #a0aec0;
+    border: 1px solid var(--border);
 }
-.back-btn:hover { background-color: #edf2f7; }
+.back-btn:hover { background: #f7fafc; }
 
-/* === 4. レシピリスト（テーブル） === */
+
+/* === 3. リストビュー（テーブル） === */
+main { background: transparent; }
 #recipeTable {
     width: 100%;
     border-collapse: collapse;
-    background-color: var(--card);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-}
-#recipeTable th, #recipeTable td {
-    padding: 12px 10px;
-    border: 1px solid var(--border);
-    text-align: left;
-    vertical-align: middle;
+    background: var(--card);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 6px 18px rgba(20, 20, 40, 0.06);
 }
 #recipeTable th {
-    background-color: #edf2f7;
-    font-size: 0.9em;
-    font-weight: 600;
+    text-align: left;
+    padding: 12px;
+    font-size: 0.9rem;
+    background: #edf2f7;
+    border-bottom: 1px solid #e2e8f0;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
-#recipeTable tr:hover {
-    background-color: #fafafa;
+#recipeTable td {
+    padding: 10px 12px;
+    border-bottom: 1px dashed #eee;
+    vertical-align: middle; /* 上から中央に修正 */
+    font-size: 0.95rem;
 }
+#recipeTable tbody tr:hover { background: rgba(43, 108, 176, 0.03); }
 .recipe-thumb {
-    width: 80px; 
-    height: 60px; 
+    width: 60px; 
+    height: 45px; 
     object-fit: cover;
-    border-radius: 3px;
+    border-radius: 4px;
 }
 
-/* --- リスト内のタグ/ラベル --- */
-.tag-type {
+/* --- タグとピル --- */
+.muted { color: var(--muted); font-size: 0.85rem; }
+.pill {
     display: inline-block;
-    padding: 3px 8px;
+    padding: 4px 8px;
+    border-radius: 999px;
+    background: #eef5ff;
+    color: var(--accent);
+    font-size: 0.8rem;
+    font-weight: 500;
+}
+.tag-type {
+    padding: 4px 8px;
+    border-radius: 6px;
+    font-size: 0.8rem;
+    font-weight: 500;
+    white-space: nowrap;
+}
+/* 種類タグの色 */
+.type-recipe { background: #e6fffa; color: #2c7a7b; } /* 以前の #fff7ed から変更: より見やすい緑青系へ */
+.type-pre { background: #f0fff4; color: var(--success); }
+
+.actions button { margin-right: 6px; }
+
+/* === 4. モーダル (フィルター・詳細) === */
+.modal-backdrop {
+    position: fixed;
+    inset: 0;
+    background: rgba(12, 18, 30, 0.6);
+    display: none; /* JSで display: flex; に切り替える */
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    z-index: 1000;
+}
+.modal {
+    width: 100%;
+    max-width: 760px;
+    background: var(--card);
     border-radius: 12px;
-    font-size: 0.8em;
-    font-weight: 600;
-}
-.type-recipe { background-color: #e6fffa; color: #319795; }
-.type-pre { background-color: #fff5f5; color: var(--danger); }
-.muted { color: #718096; font-size: 0.9em; }
-
-/* === 5. 詳細ビュー === */
-#detailContainer h1 { margin-bottom: 5px; }
-#detailContainer h2 { 
-    margin-top: 30px; 
-    border-bottom: 2px solid var(--border);
-    padding-bottom: 5px;
+    padding: 25px;
+    box-shadow: 0 10px 30px rgba(10, 20, 40, 0.25);
+    max-height: 90vh;
+    overflow-y: auto;
 }
 
-/* メタ情報ピル */
-#detailMeta {
-    margin: 15px 0;
+/* --- フィルターモーダル固有 --- */
+.filter-group {
+    border: 1px solid var(--border);
+    padding: 15px;
+    border-radius: 6px;
+    margin-bottom: 15px;
+}
+.filter-group legend {
+    font-weight: bold;
+    padding: 0 10px;
+    color: #4a5568;
+}
+.radio-options-container {
     display: flex;
     flex-wrap: wrap;
+    gap: 15px;
+}
+.filter-group .filter-item {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+.filter-item label { cursor: pointer; }
+.filter-input-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 10px;
+    margin-top: 10px;
+}
+
+
+/* === 5. 詳細ビュー固有 (#detailContainer) === */
+#detailMeta {
+    display: flex;
     gap: 8px;
+    flex-wrap: wrap;
+    margin: 15px 0;
 }
-#detailMeta .pill {
-    background-color: #e2e8f0;
-    padding: 7px 12px;
-    border-radius: 20px;
-    font-size: 0.85em;
-    font-weight: 600;
+#detailContainer h2 {
+    margin-top: 30px;
+    border-bottom: 2px solid var(--border);
+    padding-bottom: 5px;
+    font-size: 1.2rem;
 }
-.pre-link-pill {
-    background-color: #fffff0;
-    color: #b7791f;
-    border: 1px solid #fbd38d;
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px; /* 以前の12pxから少し広げました */
 }
+.section-title { font-weight: 700; margin: 10px 0 6px 0; }
+ul { margin: 6px 0 12px 20px; }
+li { padding: 3px 0; }
 
-/* 詳細リスト（材料、手順、メモ） */
-#detailIngredients, #detailProps, #detailMemo {
-    background-color: #ffffff;
-    padding: 15px;
-    border: 1px solid var(--border);
-    border-radius: 6px;
-}
-#detailIngredients ul, #detailProps ul, #detailMemo ul {
-    list-style: none;
-    padding-left: 0;
-    margin: 0;
-}
-#detailIngredients li, #detailProps li, #detailMemo li {
-    padding: 5px 0;
-    border-bottom: 1px dotted #e2e8f0;
-}
-#detailIngredients li:last-child, #detailProps li:last-child, #detailMemo li:last-child {
-    border-bottom: none;
-}
-
-/* 手順カードレイアウト */
+/* 手順カード */
 #detailRecipe {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;
+    margin-top: 15px;
 }
 .recipe-step-card {
     background: var(--card);
-    border: 1px solid #dee2e6;
+    border: 1px solid var(--border);
     padding: 15px;
     border-radius: 6px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.05);
 }
-.recipe-step-card p {
-    margin-top: 10px;
-}
+.recipe-step-card p { margin-top: 10px; }
 
-/* === 6. おすすめ提案ビュー === */
-#recommendOptions {
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid var(--border);
+/* メモ・備考 */
+pre { 
+    white-space: pre-wrap;
+    background: #f8fafc;
+    padding: 12px;
     border-radius: 8px;
+    border: 1px solid #eef2f7;
+    font-size: 0.9rem;
+    color: #333;
 }
-#recommendOptions h3 {
-    margin-top: 0;
+.notice {
+    padding: 12px;
+    border-radius: 8px;
+    background: #fff3f3;
+    color: var(--danger);
+    border: 1px solid rgba(197, 48, 48, 0.12);
+    margin-bottom: 12px;
+}
+.small { font-size: 0.85rem; color: var(--muted); }
+footer { 
+    margin-top: 14px; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    gap: 10px; 
+    flex-wrap: wrap;
 }
 
+/* === 6. おすすめビュー固有 (#recommendContainer) === */
 .recommend-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -227,103 +289,33 @@ button:active {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     cursor: pointer;
-    transition: box-shadow 0.2s, background-color 0.2s;
 }
 .recommend-card:hover {
-    background-color: #f7fafc;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.15) !important;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.15);
 }
 
-/* === 7. フィルターモーダル === */
-#filterModal {
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
-    background: rgba(0,0,0,0.6); /* 暗いオーバーレイ */
-    justify-content: center; 
-    align-items: center; 
-    z-index: 100;
-    /* JSによって display: flex; が設定される */
-}
-#filterModal > div {
-    background: white; 
-    padding: 30px; 
-    border-radius: 8px; 
-    max-width: 600px; 
-    width: 90%; 
-    max-height: 90%; 
-    overflow-y: auto;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-}
 
-.filter-group {
-    border: 1px solid var(--border);
-    padding: 15px;
-    border-radius: 6px;
-    margin-bottom: 15px;
-}
-.filter-group legend {
-    font-weight: bold;
-    padding: 0 10px;
-    color: #4a5568;
-}
-.filter-hint {
-    font-size: 0.85em;
-    color: #718096;
-    margin-top: 0;
-    padding-bottom: 10px;
-    border-bottom: 1px dotted var(--border);
-}
-
-/* フィルターの選択肢レイアウト */
-.radio-options-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-}
-.filter-group .filter-item {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-.filter-item label {
-    font-weight: normal;
-    cursor: pointer;
-}
-.filter-input-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding-top: 10px;
-    border-top: 1px dashed var(--border);
-    margin-top: 10px;
-}
-
-/* === 8. モバイル対応 (簡易) === */
-@media (max-width: 768px) {
-    body {
-        padding: 10px;
+/* === 7. レスポンシブ調整 === */
+@media (max-width: 700px) {
+    body { padding: 10px; }
+    header { 
+        flex-direction: column;
+        align-items: flex-start;
     }
     .controls-area {
-        flex-direction: column;
+        margin-left: 0;
+        width: 100%;
+        justify-content: space-between;
     }
-    .action-buttons-group {
-        flex-direction: column;
-    }
-    #recipeTable th, #recipeTable td {
-        padding: 8px 5px;
-        font-size: 0.85em;
-    }
-    /* モバイルでのテーブルの表示調整 */
+    .grid { grid-template-columns: 1fr; }
+    
+    /* モバイルでのテーブルの表示調整（一部非表示） */
     #recipeTable th:nth-child(3), #recipeTable td:nth-child(3), /* 画像 */
     #recipeTable th:nth-child(5), #recipeTable td:nth-child(5) { /* 魚種/旬 */
         display: none;
     }
 }
 </style>
-
 <div id="wrap" class="list-view"> 
 
     <div id="listContainer" class="view-section">
