--- a/index.html
+++ b/index.html
@@ -5,54 +5,60 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>魚料理レシピ一覧</title>
 <style>
-/* === 0. 変数とリセット === */
+/* === 0. 変数とリセット (青・緑基調) === */
 :root {
-    --bg: #f6f7fb;       /* 全体背景 */
+    --bg: #f7fafc;       /* 全体背景: 以前の薄いグレー (#f7fafc) に戻す */
     --card: #ffffff;     /* カード、テーブル、モーダルの背景 */
-    --accent: #2b6cb0;   /* 主要ボタン (青系) */
-    --success: #2f855a;  /* 成功アクション/推奨 (緑系) */
-    --danger: #c53030;   /* 警告/クリア (赤系) */
-    --primary: #4299e1;  /* フィルターボタン (ライトブルー系) */
-    --muted: #666;       /* 薄い文字色 */
+    --accent: #4299e1;   /* 主要ボタン/リストホバー/ピル (青系) */
+    --success: #48bb78;  /* おすすめボタン (緑系) */
+    --danger: #e53e3e;   /* 警告/クリア (赤系) */
+    --muted: #718096;    /* 薄い文字色 */
     --border: #e2e8f0;   /* ボーダー色 */
     --max-width: 1200px;
 }
 * {
     box-sizing: border-box;
-    transition: background-color 0.2s, box-shadow 0.2s; /* ホバー時のトランジションを追加 */
+    transition: background-color 0.2s, box-shadow 0.2s;
 }
 body {
-    font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", "Meiryo", sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, "Hiragino Kaku Gothic ProN";
     margin: 0;
     background: var(--bg);
-    color: #222;
+    color: #2d3748; /* 文字色を濃い灰色に調整 */
     padding: 20px;
     display: flex;
     justify-content: center;
 }
 
-/* === 1. レイアウトとビューの切り替え === */
+/* === 1. レイアウトとビューの切り替え (JSエラー対策) === */
 #wrap {
     width: 100%;
     max-width: var(--max-width);
-    transition: all 0.5s ease; /* ビュー切り替え時のスムーズな動き */
+    margin: 0 auto;
+    transition: all 0.5s ease;
 }
-/* ビューの排他制御: JSが設定するクラスに基づいて表示/非表示を切り替える */
+
+/* JSエラーで真っ白になる問題の対策として、デフォルトはリストビューを表示 */
 #listContainer, #detailContainer, #recommendContainer {
     display: none;
     padding-top: 20px;
 }
+#listContainer { display: block; } /* デフォルトでリストを表示 */
+
+/* JSによるビュー切り替え */
 #wrap.list-view #listContainer { display: block; }
+#wrap.detail-view #listContainer, #wrap.detail-view #recommendContainer { display: none; }
 #wrap.detail-view #detailContainer { display: block; }
+#wrap.recommend-view #listContainer, #wrap.recommend-view #detailContainer { display: none; }
 #wrap.recommend-view #recommendContainer { display: block; }
 
-/* === 2. ヘッダーとコントロール === */
+/* === 2. ヘッダーとコントロール (検索欄の修正) === */
 header {
     display: flex;
     gap: 12px;
     align-items: flex-end;
     margin-bottom: 18px;
-    flex-wrap: wrap; /* モバイル対応 */
+    flex-wrap: wrap;
 }
 header h1 { margin: 0; font-size: 1.3rem; }
 .controls-area {
@@ -62,11 +68,14 @@ header h1 { margin: 0; font-size: 1.3rem; }
     flex-wrap: wrap;
     align-items: center;
 }
+/* 検索欄・セレクトボックスのスタイルを復活 */
 input[type="search"], select {
-    padding: 8px 10px;
+    padding: 10px 12px;
     border-radius: 8px;
-    border: 1px solid #d6d8df;
-    background: white;
+    border: 1px solid var(--border);
+    background: var(--card);
+    font-size: 1em; /* サイズも調整 */
+    color: #2d3748;
 }
 
 /* --- ボタン群 --- */
@@ -75,92 +84,93 @@ button, .back-btn {
     border-radius: 8px;
     border: none;
     cursor: pointer;
-    font-weight: 600;
+    font-weight: bold;
     white-space: nowrap;
+    transition: background-color 0.2s;
 }
 button:hover { filter: brightness(1.1); }
-button:active { transform: scale(0.98); }
-button:disabled { opacity: 0.6; cursor: not-allowed; }
 
-/* アクションボタン（緑・青・赤） */
+/* アクションボタン (色合いを青・緑・赤に調整) */
 #recommendOpenBtn { background: var(--success); color: white; }
-#filterOpenBtn { background: var(--primary); color: white; }
+#filterOpenBtn { background: var(--accent); color: white; }
 #applyFilterBtn { background: var(--success); color: white; }
 #filterClearBtn { background: var(--danger); color: white; }
+#reloadBtn { background: var(--card); color: #4a5568; border: 1px solid #a0aec0; } /* 再読み込みボタンの追加 */
 
-/* 戻るボタン（白・グレー） */
+/* 戻るボタン */
 .back-btn { 
     background: var(--card); 
     color: #4a5568;
-    border: 1px solid var(--border);
+    border: 1px solid #a0aec0;
 }
-.back-btn:hover { background: #f7fafc; }
+.back-btn:hover { background: #edf2f7; }
 
-
-/* === 3. リストビュー（テーブル） === */
-main { background: transparent; }
+/* === 3. リストビュー（テーブル） (ソートの初期状態修正) === */
 #recipeTable {
     width: 100%;
     border-collapse: collapse;
     background: var(--card);
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 6px 18px rgba(20, 20, 40, 0.06);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
 #recipeTable th {
     text-align: left;
     padding: 12px;
     font-size: 0.9rem;
     background: #edf2f7;
-    border-bottom: 1px solid #e2e8f0;
+    border-bottom: 1px solid var(--border);
     position: sticky;
     top: 0;
     z-index: 1;
+    cursor: pointer; /* ソート可能なことを示す */
 }
 #recipeTable td {
     padding: 10px 12px;
-    border-bottom: 1px dashed #eee;
-    vertical-align: middle; /* 上から中央に修正 */
+    border-bottom: 1px solid #eee; /* dashedからsolidに変更 */
+    vertical-align: middle;
     font-size: 0.95rem;
 }
-#recipeTable tbody tr:hover { background: rgba(43, 108, 176, 0.03); }
-.recipe-thumb {
-    width: 60px; 
-    height: 45px; 
-    object-fit: cover;
-    border-radius: 4px;
+#recipeTable tbody tr:hover { background: rgba(66, 153, 225, 0.05); } /* ホバー色をアクセントカラーに連動 */
+
+/* --- ソート表示のためのスタイル --- */
+/* No (ID) をデフォルトの昇順ソートとしてマーク */
+#recipeTable th:first-child:after {
+    content: ' ▲'; /* 昇順 (Up arrow) を示す */
+    font-size: 0.8em;
+    color: var(--accent);
 }
+/* JSでクラスが適用された場合: 降順 */
+#recipeTable th.sort-desc:after {
+    content: ' ▼'; /* 降順 (Down arrow) */
+}
+/* JSでクラスが適用された場合: 非ソート */
+#recipeTable th:not(.sort-asc):not(.sort-desc):after {
+    content: ' '; 
+}
+
 
 /* --- タグとピル --- */
-.muted { color: var(--muted); font-size: 0.85rem; }
 .pill {
-    display: inline-block;
-    padding: 4px 8px;
-    border-radius: 999px;
-    background: #eef5ff;
+    background: #e9eef7; /* 青系の薄い背景 */
     color: var(--accent);
-    font-size: 0.8rem;
-    font-weight: 500;
+    padding: 5px 10px; /* サイズ調整 */
 }
 .tag-type {
-    padding: 4px 8px;
-    border-radius: 6px;
-    font-size: 0.8rem;
-    font-weight: 500;
-    white-space: nowrap;
+    padding: 3px 8px; /* サイズ調整 */
+    font-weight: 600;
 }
-/* 種類タグの色 */
-.type-recipe { background: #e6fffa; color: #2c7a7b; } /* 以前の #fff7ed から変更: より見やすい緑青系へ */
-.type-pre { background: #f0fff4; color: var(--success); }
+.type-recipe { background: #e6fffa; color: #2c7a7b; } 
+.type-pre { background: #fff5f5; color: var(--danger); } /* 赤系の準備タグに戻す */
+.muted { color: var(--muted); font-size: 0.85rem; }
 
-.actions button { margin-right: 6px; }
 
 /* === 4. モーダル (フィルター・詳細) === */
 .modal-backdrop {
     position: fixed;
     inset: 0;
-    background: rgba(12, 18, 30, 0.6);
-    display: none; /* JSで display: flex; に切り替える */
+    background: rgba(0, 0, 0, 0.6); /* より濃いオーバーレイ */
+    display: none;
     align-items: center;
     justify-content: center;
     padding: 20px;
@@ -168,134 +178,49 @@ main { background: transparent; }
 }
 .modal {
     width: 100%;
-    max-width: 760px;
+    max-width: 650px; /* 少し小さめに調整 */
     background: var(--card);
     border-radius: 12px;
     padding: 25px;
-    box-shadow: 0 10px 30px rgba(10, 20, 40, 0.25);
+    box-shadow: 0 10px 30px rgba(10, 20, 40, 0.3);
     max-height: 90vh;
     overflow-y: auto;
 }
-
-/* --- フィルターモーダル固有 --- */
 .filter-group {
     border: 1px solid var(--border);
     padding: 15px;
     border-radius: 6px;
     margin-bottom: 15px;
 }
-.filter-group legend {
-    font-weight: bold;
-    padding: 0 10px;
-    color: #4a5568;
-}
 .radio-options-container {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
 }
-.filter-group .filter-item {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-.filter-item label { cursor: pointer; }
-.filter-input-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding-top: 10px;
-    margin-top: 10px;
-}
 
 
 /* === 5. 詳細ビュー固有 (#detailContainer) === */
-#detailMeta {
-    display: flex;
-    gap: 8px;
-    flex-wrap: wrap;
-    margin: 15px 0;
-}
 #detailContainer h2 {
-    margin-top: 30px;
     border-bottom: 2px solid var(--border);
-    padding-bottom: 5px;
-    font-size: 1.2rem;
 }
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px; /* 以前の12pxから少し広げました */
+    gap: 20px;
 }
-.section-title { font-weight: 700; margin: 10px 0 6px 0; }
-ul { margin: 6px 0 12px 20px; }
-li { padding: 3px 0; }
-
-/* 手順カード */
 #detailRecipe {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;
-    margin-top: 15px;
 }
-.recipe-step-card {
-    background: var(--card);
-    border: 1px solid var(--border);
-    padding: 15px;
-    border-radius: 6px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
-}
-.recipe-step-card p { margin-top: 10px; }
-
-/* メモ・備考 */
 pre { 
-    white-space: pre-wrap;
     background: #f8fafc;
-    padding: 12px;
-    border-radius: 8px;
     border: 1px solid #eef2f7;
-    font-size: 0.9rem;
-    color: #333;
-}
-.notice {
     padding: 12px;
     border-radius: 8px;
-    background: #fff3f3;
-    color: var(--danger);
-    border: 1px solid rgba(197, 48, 48, 0.12);
-    margin-bottom: 12px;
-}
-.small { font-size: 0.85rem; color: var(--muted); }
-footer { 
-    margin-top: 14px; 
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    gap: 10px; 
-    flex-wrap: wrap;
 }
 
-/* === 6. おすすめビュー固有 (#recommendContainer) === */
-.recommend-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
-}
-.recommend-card {
-    background-color: var(--card);
-    border: 1px solid #ddd;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    cursor: pointer;
-}
-.recommend-card:hover {
-    box-shadow: 0 6px 15px rgba(0,0,0,0.15);
-}
-
-
-/* === 7. レスポンシブ調整 === */
+/* === 6. レスポンシブ調整 === */
 @media (max-width: 700px) {
     body { padding: 10px; }
     header { 
